# Eyelids-IR

./: .gitignore  model.py  offline_test.py  offline_test_video.py  online_test_video.py  opts.py  opts_run.py  pyproject.toml  run-egogesture.sh  run.py  run_offline.sh  run_online.sh  run_online_video_egogesture.sh
results/: opts.json  opts_clf.json  opts_det.json
