[tool.poetry]
name = "eyelids-ir"
version = "0.1.0"
description = ""
authors = ["Yanbo Wong <40051361+StevenRCE0@users.noreply.github.com>"]
license = "CC0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
